# libxml2

./: .gitignore  BUILD.bazel  README.md  WORKSPACE  bazel-bin  bazel-genfiles  bazel-libxml2  bazel-out  bazel-testlogs  html.go  html_test.go  libxml.BUILD  libxml2_bench_test.go  libxml2_example_test.go  parser.go  parser_test.go  xml_test.go  xsd_test.go
clib/: BUILD.bazel  clib.go
dom/: BUILD.bazel  c14n_test.go  document_test.go  dom.go  interface.go  node.go  node_attr.go  node_document.go  node_element.go  node_namespace.go  node_test.go  node_text.go  node_wrap.go  serialize.go
internal/cmd/genwrapnode/: BUILD.bazel  genwrapnode.go
internal/debug/: BUILD.bazel
parser/: BUILD.bazel  parser.go
types/: BUILD.bazel  interface.go
xpath/: BUILD.bazel  interface.go  iterator.go  util.go  xpath.go  xpath_test.go
xsd/: BUILD.bazel  xsd.go
