load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "dom.go",
        "interface.go",
        "node.go",
        "node_attr.go",
        "node_document.go",
        "node_element.go",
        "node_namespace.go",
        "node_text.go",
        "node_wrap.go",
        "serialize.go",
    ],
    importpath = "github.com/publica-project/libxml2/dom",
    visibility = ["//visibility:public"],
    deps = [
        "//clib:go_default_library",
        "//types:go_default_library",
        "//xpath:go_default_library",
        "@com_github_pkg_errors//:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "c14n_test.go",
        "document_test.go",
        "node_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//:go_default_library",
        "//clib:go_default_library",
        "//types:go_default_library",
        "@com_github_stretchr_testify//assert:go_default_library",
    ],
)
