load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["genwrapnode.go"],
    importpath = "github.com/publica-project/libxml2/internal/cmd/genwrapnode",
    visibility = ["//visibility:private"],
    deps = ["@com_github_pkg_errors//:go_default_library"],
)

go_binary(
    name = "genwrapnode",
    embed = [":go_default_library"],
    visibility = ["//:__subpackages__"],
)
